# SmartFactory-Logistics-Automation

./: README.md
HCR-3_Raspberry_PI/: Depth_cam.py  Depth_cam_color.py  Depth_cam_ver02.py  depth_control2.py
HCR-3_Raspberry_PI/ros2/custom_interfaces/custom_interfaces/: package.xml
HCR-3_Raspberry_PI/ros2/hcr3_action/: CMakeLists.txt  package.xml
HCR-3_Raspberry_PI/ros2/hcr3_action/src/: hcr3_action.cpp
HCR-3_Raspberry_PI/ros2/hcr3_bridge_pkg/: package.xml  setup.cfg  setup.py
HCR-3_Raspberry_PI/ros2/hcr3_bridge_pkg/hcr3_bridge_pkg/: hcr3_bridge.py
HCR-3_Raspberry_PI/ros2/hcr3_bridge_pkg/launch/: hcr3.launch.py
HCR-3_STM32/: HCR-3_STM32.c
HCR-3_STM32/relay_module/: .cproject  .project  relay_module Debug.launch  relay_module.ioc
HCR-3_STM32/relay_module/Core/Inc/: main.h
HCR-3_STM32/relay_module/Core/Src/: main.c  stm32f4xx_hal_msp.c
HCR-3_STM32/relay_module/Debug/: makefile  relay_module.elf  relay_module.list  relay_module.map
HCR-3_STM32/relay_module/Debug/Core/Src/: main.cyclo  main.su
Main_Server/smart_factory_server/: CMakeLists.txt  package.xml
Main_Server/smart_factory_server/include/smart_factory_server/client/: factory_client.hpp  tcp_bridge.hpp
Main_Server/smart_factory_server/include/smart_factory_server/server/: hcr3.hpp  omx_loading.hpp  omx_storage.hpp  turtle_tcp.hpp
Main_Server/smart_factory_server/src/client/: client_main.cpp
Main_Server/smart_factory_server/src/sample/: action_client.cpp  action_server.cpp  my_action_client.launch.py  my_action_server.launch.py
Main_Server/smart_factory_server/src/server/: server_main.cpp
OMX_Loadingstation/Openmanipulator_docker/total_manipulator_bringup/: setup.py
OMX_Loadingstation/Openmanipulator_docker/total_manipulator_bringup/launch/: loading_bringup.launch.py
OMX_Loadingstation/Openmanuplator/total_manipulator_bringup/: setup.py
OMX_Loadingstation/Openmanuplator/total_manipulator_bringup/launch/: loading_bringup.launch.py
OMX_Loadingstation/PhsicalAI_docker/custom_interfaces/custom_interfaces/action/: IntAct.action
OMX_Loadingstation/PhsicalAI_docker/omx_action/: package.xml
OMX_Loadingstation/PhsicalAI_docker/omx_inference/: setup.cfg  setup.py
OMX_Loadingstation/PhsicalAI_docker/omx_inference/launch/: omx_loading_ai.launch.py
OMX_Loadingstation/PhsicalAI_docker/omx_inference/omx_inference/: omx_loading_ai.py
OMX_Loadingstation/PhysicalAI/custom_interfaces/custom_interfaces/: CMakeLists.txt
OMX_Loadingstation/PhysicalAI/omx_action/src/: omx_loading_action.cpp
OMX_Loadingstation/PhysicalAI/omx_inference/omx_inference/: omx_loading_ai.py
OMX_Loadingstation/PhysicalAI_docker/omx_action/: CMakeLists.txt
OMX_Storage/Openmanipulator_docker/total_manipulator_bringup/: package.xml
OMX_Storage/Openmanipulator_docker/total_manipulator_bringup/launch/: loading_bringup.launch.py  storage_bringup.launch.py
OMX_Storage/Openmanuplator/total_manipulator_bringup/: setup.cfg
OMX_Storage/Openmanuplator/total_manipulator_bringup/launch/: storage_bringup.launch.py
OMX_Storage/PhysicalAI/omx_action/: CMakeLists.txt
OMX_Storage/PhysicalAI/omx_action/src/: omx_storage_action.cpp
OMX_Storage/PhysicalAI/omx_inference/: package.xml  setup.py
OMX_Storage/PhysicalAI/omx_inference/launch/: omx_storage_ai.launch.py
OMX_Storage/PhysicalAI/omx_inference/omx_inference/: omx_storage_ai.py
OMX_Storage/PhysicalAI_docker/omx_action/: CMakeLists.txt
OMX_Storage/PhysicalAI_docker/omx_action/src/: omx_storage_action.cpp
OMX_Storage/PhysicalAI_docker/omx_inference/: package.xml  setup.py
OMX_Storage/PhysicalAI_docker/omx_inference/launch/: omx_storage_ai.launch.py
OMX_Storage/PhysicalAI_docker/omx_inference/omx_inference/: omx_loading_ai.py  omx_storage_ai.py
Tuttlebot/logistics_pkg/: CMakeLists.txt  package.xml
Tuttlebot/logistics_pkg/launch/: logistics_launch.py
Tuttlebot/logistics_pkg/src/: logistics_controller.cpp  turtlebot3_control.cpp  turtlebot3_direct_control.cpp  turtlebot3_tcp.cpp  waypoint_tester.cpp
Tuttlebot/logistics_pkg/src/install/: local_setup.sh  setup.sh
